# ajrudzitis.github.io

./: .gitignore  CLAUDE.md  CNAME  Gemfile  MIGRATION.md  PROOFREADING_CHECKLIST.md  README.md  TODO.md  _config.yml  bookshelf.md  haikus.html  index.html  index.markdown  mindfulness-quotes.html  recruiter.html
.github/workflows/: deploy.yml
_data/: bookshelf.csv  library.sqlite3  library.txt  librarything-bookshelf.json  misc_books.csv  misc_books.txt
_data/isbns/: 2022-07-16.txt  2022-08-15.txt  2022-09-29.txt  2022-10-07.txt
_posts/: 2022-05-30-welcome-to-jekyll.markdown
articles/_posts/: 2019-06-30-thats-not-what-happened.html
buttondown-cli/: .gitignore  CLAUDE.md  Cargo.toml  README.md
buttondown-cli/src/: api.rs  backfill.rs  config.rs  letter.rs  lib.rs  main.rs  models.rs  sync.rs
letters/: 2020-01-25.html  2020-03-03.html  2020-10-03.html  2020-11-25.html  2021-06-13.html  2021-11-22.md  2022-05-20.md  index.html  index.md
letters/_posts/: 2020-02-28-title.html  2020-03-10-life-under-self-isolation.html  (+30 more)
quotes/: catherine-2.txt  chop-wood.txt  corinthians.txt  hall-1.txt  nothing.txt  one-thing.txt  reborn.txt  seeking.txt  shinzen-clarity.txt  siddhartha.txt  talking-heads.txt  tao-1.txt  the-garden-1.txt  white.txt  yates1.txt  yates2.txt  yates5.txt  your-lifetimes.txt  zamm-1.txt  zamm-10.txt  zamm-11.txt  zamm-2.txt  zamm-3.txt  zamm-5.txt  zamm-9.txt
site/: config.toml
static-site-generator/: Cargo.toml  README.md
static-site-generator/src/: config.rs  content.rs  generator.rs  lib.rs  main.rs  server.rs  template.rs  watcher.rs
(+122 files in other folders)
