[package]
name = "buttondown-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP client (using rustls to avoid OpenSSL system dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
walkdir = "2.5"

# Output formatting
colored = "2.1"
comfy-table = "7.1"
