[package]
name = "static-site-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Templating
tera = "1.20"

# Markdown
pulldown-cmark = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
csv = "1.3"

# File watching
notify = "6.1"

# Dev server
axum = "0.7"
tokio = { version = "1.41", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Utilities
anyhow = "1.0"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
